--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   window.$docsify = {
     el: '#app',
     name: '<b>DQ大神奇</b>', //  替换 => 左侧导航栏的标题
-    repo: 'http://git.pupuvip.com:8005/${}',   // 替换 => 您的项目git地址
+    repo: 'https://github.com/donnie1717/blog',   // 替换 => 您的项目git地址
     loadNavbar: true,
     coverpage: true,
     loadSidebar: true,
